@@ -2,9 +2,14 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.4 ]---------------
 
+
+2005-05-15  Erik Grinaker <erikg@codepoet.no>
+
+	* implemented basic applet user interface
+
 2005-04-15  Erik Grinaker <erikg@codepoet.no>
 
-	* initial file handling
+	* initial applet file handling
 
 2005-04-14  Erik Grinaker <erikg@codepoet.no>
 
